Fixed ca model page layout issues.

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -264,7 +264,6 @@ pre {
 }
 
 .om-sidebar {
-	overflow:scroll;
 	/*padding:0 20px 20px 20px;*/
 	min-width:300px;
 	width:300px;
